--- a/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
@@ -1,6 +1,6 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 
-{% do script([ 'web/activity-manage/video-activity-fields.js']) %}
+{% do script(['http://localhost:12345/sdk.js','web/activity-manage/video-activity-fields.js']) %}
 {% block activity_content %}
   {% set mediaType = activity.mediaType|default('video') %}
   {% set fileType = 'video' %}
