--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -28,7 +28,7 @@
           设置完成条件
         </li>
       </ul>
-    <div id="task-manage-type" class="" data-editor-mode="{{ mode }}"
+    <div id="task-manage-type" class="hidden" data-editor-mode="{{ mode }}"
     {% if mode == 'edit' %}
       data-editor-type="{{ currentType }}"
       data-editor-step2-url="{{ path('course_manage_task_fields', {courseId: course.id, mode: 'edit', id: task.id}) }}"
@@ -65,7 +65,7 @@
         </div>
       </form>
     </div>
-    <div id="task-manage-content" class="task-manage-content" style="display:none"></div>
+    <div id="task-manage-content" class="task-manage-content hidden"></div>
     <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'> <!--FIXME 临时赋值 -->
     <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
