--- a/web/assets/v2/less/page/course-manage.less
+++ b/web/assets/v2/less/page/course-manage.less
@@ -234,6 +234,10 @@
         color: #333;
         margin-top: 0;
       }
+      .number {
+        font-weight: 500;
+        font-size: 24px;
+      }
     }
   }
 
