--- a/web/assets/v2/css/main-en-us.css
+++ b/web/assets/v2/css/main-en-us.css
@@ -9858,6 +9858,10 @@ textarea {
   color: #333;
   margin-top: 0;
 }
+.dashboard-panel .course-dashboard-ul li .number {
+  font-weight: 500;
+  font-size: 24px;
+}
 .dashboard-panel .course-dashboard-footer {
   margin-top: 90px;
 }
