--- a/src/WebBundle/Resources/views/LiveActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/LiveActivity/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WebBundle:Component:content-layout.html.twig' %}
+{% extends 'WebBundle:Activity:content-layout.html.twig' %}
 {# {% do script(['libs/perfect-scrollbar.js', 'web/task/show.js']) %} #}
 {% do script(['web/task/live-show.js']) %}
 {% block content %} 
