--- a/src/WebBundle/Resources/views/AudioActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/AudioActivity/modal.html.twig
@@ -1,6 +1,6 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 
-{% do script([ 'web/activity-manage/video-activity-fields.js']) %}
+{% do script([ 'web/activity-manage/audio-activity-fields.js']) %}
 {% block activity_content %}
   {% set mediaType = activity.mediaType|default('audio') %}
   {% set fileType = 'audio' %}
@@ -21,7 +21,7 @@
     <div class="col-xs-2 control-label">
       <label for="media" class="style">{{ '音频'|trans }}</label>
     </div>
-    {% include 'WebBundle:FileChooser:file-choose.html.twig' %}
+    {% include 'WebBundle:FileChooser:file-choose.html.twig'with {mediaType: mediaType,fileType:'audio',file: activity.ext.file|default(null) } %}
   </div>
   <div class="form-group for-video-type" id="lesson-length-form-group">
     <div class="col-xs-2 control-label for-video-type">
@@ -33,10 +33,9 @@
              value="{{ activity.minute|default(null) }}">{{ '分'|trans }}
       <input class="form-control width-input width-input-small" id="second" type="text" name="second"
              value="{{ activity.second|default(null) }}">{{ '秒'|trans }}
+      <input type="hidden" id="ext_mediaId" name="ext[mediaId]" value="{{ activity.ext.mediaId|default(null) }}">
     </div>
   </div>
-
-
 {% endblock %}
 {% block activity_finish %}
   <div class=" form-group">
