--- a/src/Topxia/AdminBundle/Resources/views/TagGroup/list-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/TagGroup/list-tr.html.twig
@@ -1,8 +1,10 @@
 <tr id="tagGroup-tr-{{ groupId }}">
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td><button class="btn btn-default btn-sm" data-url="{{ path('admin_tag_group_update', {groupId: groupId}) }}" data-toggle="modal" data-target="#modal">{{'编辑'|trans}}</button></td>
+  <td>{{ tagGroup.id }}</td>
+  <td>{{ tagGroup.name }}</td>
+  <td>{{ tagGroup.scope }}</td>
+  <td>{{ tagGroup.tagNum }}</td>
+  <td>{{ tagGroup.createdTime }}</td>
+  <td>
+    <button class="btn btn-default btn-sm" data-url="{{ path('admin_tag_group_update', {groupId: groupId}) }}" data-toggle="modal" data-target="#modal">{{'编辑'|trans}}</button>
+  </td>
 </tr>
