--- a/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
+++ b/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
@@ -1,7 +1,7 @@
 .task-manage-editor {
   .task-manage-type-list {
     padding: 0 45px;
-    margin-bottom: 15px;
+    margin-bottom: 0;
     list-style: none;
     .task-manage-type-item {
       margin-bottom: 20px;
