--- a/src/WebBundle/Resources/assets/less/component/load-animation.less
+++ b/src/WebBundle/Resources/assets/less/component/load-animation.less
@@ -1,6 +1,8 @@
-.text-content-field {
+.type-hidden {
   display: block !important;
   height: 0px!important;
+  border:0;
+  .opacity(0);
 }
 
 .load-animation {
