--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -36,42 +36,28 @@
     {% elseif mode == 'create' %}
       data-save-url="{{ path('course_manage_task_create', {courseId: course.id}) }}"
     {% endif %}>
-      <ul class="task-manage-type-list row">
-        {% if types is defined %}
-          {% for type, value in types %}
+      <form class="form-horizontal" id="step1-form" >
+        <ul class="form-group task-manage-type-list ">
+          {% if types is defined %}
+            {% for type, value in types %}
             <li class="col-xs-3 task-manage-type-item js-course-tasks-item {% if currentType is defined and type == currentType %} active {% endif %}" data-role="activityType" data-type="{{ type }}" data-content-url="{{ path('course_manage_task_fields',{courseId:course.id, mode: 'create', type: type}) }}">
-              <a href="javascript:;" {% if mode=='edit' %} disabled {% endif %}>
-                <i class="{{ value.metas.icon }}"></i>
+              <a href="javascript:;" {% if mode=='edit' %} disabled {% endif %}> <i class="{{ value.metas.icon }}"></i>
                 {{ value.metas.name }}
               </a>
             </li>
-          {% endfor %}
-        {% endif %}
-      </ul>
-      <form class="form-horizontal" id="step1-form" >
-        <div class="form-group">
-          <div class="col-xs-2 control-label">
-          <label for="title">{{ '标题'|trans }}</label>
-          </div>
-          <div class="col-xs-9 controls">
-            <input id="title" class="form-control" type="text" name="title" value={{ activity.title|default('') }} >
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-xs-9 col-xs-offset-2 controls">
-            <input type="checkbox" name="isOptional" value="1" {% if task is defined and task.isOptional %} checked {% endif %}>设为选修 
-            <span class="color-gray mll">学习结果将不会计入学习进度、学习统计中，并且不会影响下一任务的解锁</span>
-          </div>
-        </div>
+            {% endfor %}
+          {% endif %}
+          <li class="col-xs-12"><input name="mediaType" class="type-hidden"></li>
+        </ul>
+        <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'> <!--FIXME 临时赋值 -->
+        <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
       </form>
     </div>
     <div id="task-manage-content" class="task-manage-content hidden"></div>
-    <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'> <!--FIXME 临时赋值 -->
-    <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
 {% endblock %}
 {% block footer %}
   <button id="course-tasks-prev" type="submit" class="btn btn-default hidden " >{{ '上一步'|trans }}</button>
-  <button id="course-tasks-next" type="submit" class="btn btn-primary" disabled>{{ '下一步'|trans }}</button>
+  <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
   <button id="course-tasks-submit" type="submit" class="btn btn-info hidden"  data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
 {% endblock %}
