--- a/web/assets/v2/less/component/modal.less
+++ b/web/assets/v2/less/component/modal.less
@@ -1,6 +1,12 @@
 .modal-title {
   word-break:break-all;
   color: @gray-darker;
+  font-size: 18px;
+}
+
+.modal-header {
+  padding: 15px 0;
+  margin: 0 15px;
 }
 
 // .modal-header .close {
