--- a/src/WebBundle/Resources/views/DiscussActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/DiscussActivity/modal.html.twig
@@ -18,7 +18,6 @@
     <div class="col-xs-2 control-label">
       <label for="condition">{{ '完成条件'|trans }}</label>
     </div>
-    <div class="col-xs-9 controls">
-      <p class="form-control-static">发表或者回复一个话题</p>
+    <div class="col-xs-9 controls">发表或者回复一个话题</div>
   </div>
 {% endblock %}
