--- a/src/Topxia/WebBundle/Resources/views/js_loader_async.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/js_loader_async.html.twig
@@ -10,6 +10,8 @@
     {% endfor %}
   ];
 
+  window.Xxxx = Array();
+
   var Loader = (function () {
     var loadScript = function (paths, index) {
       var path = paths[index];
@@ -37,7 +39,7 @@
       };
 
       script.src = path;
-      document.getElementById("modal").appendChild(script);
+      document.body.appendChild(script);
     };
 
     return {
