--- a/src/Topxia/AdminBundle/Resources/views/TagGroup/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/TagGroup/index.html.twig
@@ -4,7 +4,7 @@
 {% set script_controller = 'tag-group/list' %}
 {% block main %}
 
-<table id="tag-table" class="table table-striped">
+<table id="tag-group-table" class="table table-striped">
     <thead>
         <th width="10%">ID</th>
         <th width="20%">{{'标签组名称'|trans}}</th>
