--- a/src/Topxia/AdminBundle/Resources/views/TagGroup/tag-group-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/TagGroup/tag-group-modal.html.twig
@@ -8,16 +8,16 @@
     <div class="form-group">
       <label class="col-md-3 control-label">{{'标签组名称'|trans}}</label>
       <div class="col-md-6 controls">
-        <input class="form-control" id="tag-name-field" type="text" name="name" value="{{ tagGroup.name|default(null) }}">
+        <input class="form-control" id="tag-name-field" type="text" name="name" value="{{ tagGroup.name|default(null) }}" data-url="{{ path('admin_tag_group_checkname', {name:tagGroup.name|default(null)}) }}>
       </div>
     </div>
 
     <div class="form-group">
       <label class="col-md-3 control-label">{{'用于'|trans}}</label>
       <div class="col-md-6 controls">
-        <input type="checkbox" data-role="batch-select" name="scope[]" value="course">
-        <label class="required" {% if tagGroup.scope|default(null) in ['课程筛选'] %}checked="checked"{% endif %}>课程筛选</label>
-        <input type="checkbox" data-role="batch-select" name="scope[]" value="classroom" {% if tagGroup.scope|default(null) in ['班级筛选'] %}checked="checked"{% endif %}>
+        <input type="checkbox" data-role="batch-select" name="scope[]" value="course" {% if '课程筛选' in tagGroup.scope|default(null) %}checked="checked"{% endif %}>
+        <label class="required">课程筛选</label>
+        <input type="checkbox" data-role="batch-select" name="scope[]" value="classroom" {% if '班级筛选' in tagGroup.scope|default(null) %}checked="checked"{% endif %}>
         <label class="required">班级筛选</label>
       </div>
     </div>
