教师学完不计入统计

--- a/src/Topxia/WebBundle/Resources/views/CourseManage/Dashboard/course.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/Dashboard/course.html.twig
@@ -15,7 +15,7 @@
     </li>
     <li>
       <div class="title">{{ '完课率'|trans }}</div>
-      <span class="number">{{ (summary.finishedNum/summary.studentNum)|round(1) * 100 }}%</span>
+      <span class="number">{{ summary.finishedRate }}%</span>
     </li>
   </ul>
 
