add uploader sdk CDN

--- a/src/Topxia/WebBundle/Resources/views/Marker/text-track.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/text-track.html.twig
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="text-track-list">
-    <div id="track-select"></div>
+    <div class="mrl mtl" id="track-select"></div>
     <div class="text-track-overview mrl"></div>
   </div>
 </div>
