--- a/src/WebBundle/Resources/views/VideoActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/show.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
   <div class="dashboard-body" data-activity="{{ activity|json_encode }}">
-    <div class="lesson-content" id="lesson-video-content" data-role="lesson-content" style="display:none;"
+    <div class="lesson-content" id="video-content" data-role="lesson-content"
         {% if setting('storage.video_watermark') > 0 and setting('storage.video_watermark_image') %}
           data-watermark="{{ filepath(setting('storage.video_watermark_image'), null, true) }}"
         {% endif %}
@@ -14,9 +14,8 @@
         {% endif %}
          data-user-id="{{ app.user.id }}"
          data-balloon-player="1"
-    ></div>
+    >
     <div class="watermarkEmbedded"></div>
-    <div class="lesson-content" id="lesson-swf-content" data-role="lesson-content"></div>
-
+    </div>
   </div>
 {% endblock %}
