--- a/src/Topxia/AdminBundle/Resources/views/Notification/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Notification/index.html.twig
@@ -54,7 +54,7 @@
     <div class="empty">{{'暂无站内信'|trans}}</div>
   {% endif %}
   <div class="alert alert-info text-center">
-    全站站内通知将以系统消息形式发送给网校所有已注册用户。
+    全站站内通知将以网校通知的形式发给所有用户
   </div>
 
   {{ admin_macro.paginator(paginator) }}
