--- a/src/Permission/PermissionBundle/Resources/views/Role/role-modal.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/role-modal.html.twig
@@ -55,7 +55,7 @@
 {% endblock %}
 
 {% block footer %}
-  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">关闭</button>
+  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">取消</button>
   {% if model != 'show' %}
     <button id="role-submit" data-submiting-text="正在提交" type="submit" class="btn btn-primary" data-toggle="form-submit"
             data-target="#role-form">添加
