--- a/src/Topxia/WebBundle/Resources/views/Notification/batch-notification-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Notification/batch-notification-show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 
-{% block title %}{{'全站内通知'|trans}}{% endblock %}
+{% block title %}{{'全站站内通知'|trans}}{% endblock %}
 
 {% set notification = notification|default(null) %}
 
