--- a/src/Topxia/AdminBundle/Resources/views/TagGroup/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/TagGroup/index.html.twig
@@ -7,8 +7,8 @@
 <table id="tag-group-table" class="table table-striped">
     <thead>
         <th width="10%">ID</th>
-        <th width="20%">{{'标签组名称'|trans}}</th>
-        <th width="20%">{{'应用于'|trans}}</th>
+        <th width="15%">{{'标签组名称'|trans}}</th>
+        <th width="25%">{{'应用于'|trans}}</th>
         <th width="20%">{{'包含标签数量'|trans}}</th>
         <th width="20%">{{'标签组创建时间'|trans}}</th>
         <th width="10%">{{'操作'|trans}}</th>
@@ -20,7 +20,7 @@
           {% include 'TopxiaAdminBundle:TagGroup:list-tr.html.twig' %}
         {% endfor %}
       {% else %}
-       <tr><td colspan="20"><div class="empty">{{'暂无标签记录'|trans}}</div></td></tr>
+       <tr><td colspan="20"><div class="empty">{{'暂无标签组记录'|trans}}</div></td></tr>
       {% endif %}
 
     </tbody>
