--- a/src/Topxia/AdminBundle/Resources/views/TagGroup/tag-group-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/TagGroup/tag-group-modal.html.twig
@@ -15,10 +15,10 @@
     <div class="form-group">
       <label class="col-md-3 control-label">{{'用于'|trans}}</label>
       <div class="col-md-6 controls">
-        <input type="checkbox" data-role="batch-select" name="scope[]" value="course" {% if '课程筛选' in tagGroup.scope|default('') %}checked="checked"{% endif %}>
-        <label class="required">课程筛选</label>
-        <input type="checkbox" data-role="batch-select" name="scope[]" value="classroom" {% if '班级筛选' in tagGroup.scope|default('') %}checked="checked"{% endif %}>
-        <label class="required">班级筛选</label>
+        <input type="checkbox" data-role="batch-select" name="scope[]" value="course" {% if 'course' in tagGroup.scope|default('') %}checked="checked"{% endif %}>
+        <label class="required">课程列表筛选</label>
+        <input type="checkbox" data-role="batch-select" name="scope[]" value="classroom" {% if 'classroom' in tagGroup.scope|default('') %}checked="checked"{% endif %}>
+        <label class="required">班级列表筛选</label>
       </div>
     </div>
   
