--- a/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
@@ -2,7 +2,7 @@
 {% set nextCode = '' %}
 <div class="tabs-wrapper">
   <div class="tabs-group" style="height: 50px;">
-    <div class="title">等级</div>
+    <div class="title">分类</div>
     <ul class="content clearfix">
       {% for category in categories %}
       <li><a class="nav-link" href="">{{ category.name }}</a></li>
