完成字幕第一版功能

--- a/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
@@ -36,8 +36,7 @@
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane pane-question js-pane-question" id="practice" data-url="{{ path('course_lesson_question_marker_list',{courseId:course.id,lessonId:lesson.id})}}">
         </div>
-        <div role="tabpanel" class="tab-pane active panel-texttrack" id="text-track" data-url="{{ path('course_lesson_texttrack_list',{courseId:course.id,lessonId:lesson.id}) }}">
-          
+        <div role="tabpanel" class="tab-pane active panel-texttrack" id="text-track" data-url="{{ path('subtitle_manage',{courseId:course.id,lessonId:lesson.id}) }}">
         </div>
       </div>
     </div>
