--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -20,7 +20,7 @@
 {% set use_webapck_loader = true %}
 
 {% do css(['web.css']) %}
-{% do script(['web/task-manage/delete.js']) %}
+{% do script(['web/task-manage/index.js']) %}
 
 {% block main %}
   <div class="panel panel-default panel-col lesson-manage-panel">
