--- a/src/WebBundle/Resources/views/LiveActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/LiveActivity/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'WebBundle:Activity:content-layout.html.twig' %}
 {# {% do script(['libs/perfect-scrollbar.js', 'web/task/show.js']) %} #}
-{% do script(['web/task/live-show.js']) %}
+{% do script(['web/task/live/index.js']) %}
 {% block content %} 
 	<style type="text/css">
 	.btn-primary {
