--- a/src/WebBundle/Resources/views/Testpaper/testpaper-layout.html.twig
+++ b/src/WebBundle/Resources/views/Testpaper/testpaper-layout.html.twig
@@ -12,27 +12,36 @@
 {% block content %}
 <div class="es-section testpaper-heading">
   <div class="testpaper-titlebar clearfix">
-       <h1 class="testpaper-title">{{ paper.name }} <br><small class="text-sm">{% if paperResult.status|default(null) == 'reviewing' %}{{'答题人：'|trans}}{{ student.nickname }} {{'交卷时间：'|trans}}{{ paperResult.endTime|date('Y-n-d H:i') }} {{'用时：'|trans}}{{ paperResult.usedTime|duration }}{% elseif paperResult.status|default(null) == 'finished' %}{{'答题人：'|trans}}{{ student.nickname }} {{'交卷时间：'|trans}}{{ paperResult.endTime|date('Y-n-d H:i') }} {{'用时：'|trans}}{{ paperResult.usedTime|duration }}{% endif %}</small></h1>
-    <div class="testpaper-status">{% block testpaper_heading_status %}{% endblock %}</div>
+    <h1 class="testpaper-title">{{ paper.name }} <br>
+      <small class="text-sm">
+        {% if paperResult.status|default(null) in ['reviewing','finished'] %}
+          {{'答题人：'|trans}}{{ student.nickname }} 
+          {{'交卷时间：'|trans}}{{ paperResult.endTime|date('Y-n-d H:i') }} 
+          {{'用时：'|trans}}{{ paperResult.usedTime|duration }}
+        {% endif %}
+      </small>
+    </h1>
+    <div class="testpaper-status">
+      {% block testpaper_heading_status %}{% endblock %}
+    </div>
   </div>
-  {% block testpaper_heading_content %}{% endblock %}
-  {% if (source|default(null) == 'classroom') %}
-      {% set canHandle = classroom_permit(targetId, 'Handle') %}
-  {% else %}
-      {% set canHandle = app.user.isTeacher() %}
-  {% endif %}
-  {% if (paperResult|default(null) and paperResult.status in ['finished','reviewing'] ) and not 1 %}
 
+  {% block testpaper_heading_content %}{% endblock %}
+
+  {% if (source|default(null) == 'classroom') %}
+    {% set canHandle = classroom_permit(targetId, 'Handle') %}
   {% else %}
-    {% if showTestpaperNavbar|default('on') == 'on' %}
-      <div id="testpaper-navbar" class="testpaper-navbar" data-spy="affix" data-offset-top="200">
-        <ul class="nav nav-pills clearfix">
-          {% for type,count in paper.metas.counts if count > 0 %}
-            <li><a href="#testpaper-questions-{{ type }}">{{dict('questionType')[type]}}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-    {% endif %}
+    {% set canHandle = app.user.isTeacher() %}
+  {% endif %}
+  
+  {% if paperResult.status|default('doing') not in ['reviewing'] and showTestpaperNavbar|default('on') == 'on' %}
+    <div id="testpaper-navbar" class="testpaper-navbar" data-spy="affix" data-offset-top="200">
+      <ul class="nav nav-pills clearfix">
+        {% for type,count in paper.metas.counts if count > 0 %}
+          <li><a href="#testpaper-questions-{{ type }}">{{dict('questionType')[type]}}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
   {% endif %}
 </div>
 
