--- a/src/Topxia/WebBundle/Resources/views/CourseManage/price.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/price.html.twig
@@ -44,8 +44,11 @@
                   {{'折后价'|trans}}：<strong><span class="course-discount-price" data-discount="{{ course.discount }}">{{ course.price }}</span> {{'元'|trans}}</strong>。
                 </div>
               {% endif %}
+            
             </div>
+
           </div>
+
         {% endif %}
 
         <div class="form-group">
@@ -106,7 +109,12 @@
     {% else %}
       <div class="alert alert-danger">{{'抱歉，您无权设置课程价格，如有需要请联系网站管理员！'|trans}}</div>
     {% endif %}
-
+    <div class="alert alert-info">
+      <p style="padding-left: 50px">1.免费课程：即价格设置为“0”的课程，必须要登录才能加入学习。</p>
+      <p style="padding-left: 50px">2.免费课时：即勾选了课时标题旁【免费课时】的课时，课时标题前，有“免费”标签。</p>
+      <p style="padding-left: 50px">3.免费试看：即设置了试看时长并且有“试看”标签的课时，目前只有云视频支持试看。</p>
+      <p style="padding-left: 50px">4.管理员可在【管理后台】-【系统】-【课程设置】-【课程】中开启【免费课时允许未登录用户观看】。</p>
+    </div>
   </div>
 </div>
 {% endblock %}
