--- a/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
@@ -16,9 +16,9 @@
       </div>
     </div>
   </div>
-  <div class="text-track-list mrm mts">
-    <div id="track-select"></div>
-    <div class="text-track-overview" style="overflow-y: auto; border: #999 solid 1px; border-radius: 6px; padding: 5px 10px; display: none"></div>
+  <div class="text-track-list mrm mts ptm">
+    <div class="mrm" id="track-select"></div>
+    <div class="text-track-overview mrm"></div>
   </div>
 </div>
 <script type="text/javascript">app.load('marker/subtitle')</script>
