--- a/src/WebBundle/Resources/views/PptActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/PptActivity/show.html.twig
@@ -3,41 +3,42 @@
 {% do script(['web/activity/ppt/index.js']) %}
 
 {% block content %}
-<div id="activity-ppt-content" data-slides="{{ slides|join(',') }}" {% if setting('magic.ppt_watermark') %} data-watermark-url="{{ path('cloud_ppt_watermark') }}"{% endif %}>
-  {% if not error is empty %}
-    {{ error.message|raw }}
-  {% endif %}
+  <div id="activity-ppt-content" data-event-url=""
+       data-slides="{{ slides|join(',') }}" {% if setting('magic.ppt_watermark') %} data-watermark-url="{{ path('cloud_ppt_watermark') }}"{% endif %}>
+    {% if not error is empty %}
+      {{ error.message|raw }}
+    {% endif %}
 
-  <div class="slide-player">
-    <div class="slide-player-body loading-background"></div>
-    <div class="slide-notice">
-      <div class="header">{{ '已经到最后一张图片了哦'|trans }}
-        <button type="button" class="close">×</button>
+    <div class="slide-player">
+      <div class="slide-player-body loading-background"></div>
+      <div class="slide-notice">
+        <div class="header">{{ '已经到最后一张图片了哦'|trans }}
+          <button type="button" class="close">×</button>
+        </div>
       </div>
-    </div>
-    <div class="slide-player-control clearfix">
-      <a href="javascript:" class="goto-first">
-        <span class="glyphicon glyphicon-step-backward"></span>
-      </a>
-      <a href="javascript:" class="goto-prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-      </a>
-      <a href="javascript:" class="goto-next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-      </a>
-      <a href="javascript:" class="goto-last">
-        <span class="glyphicon glyphicon-step-forward"></span>
-      </a>
-      <a href="javascript:" class="fullscreen">
-        <span class="glyphicon glyphicon-fullscreen"></span>
-      </a>
-      <div class="goto-index-input">
-        <input type="text" class="goto-index form-control input-sm" value="1">&nbsp;/&nbsp;
-        <span class="total"></span>
+      <div class="slide-player-control clearfix">
+        <a href="javascript:" class="goto-first">
+          <span class="glyphicon glyphicon-step-backward"></span>
+        </a>
+        <a href="javascript:" class="goto-prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a href="javascript:" class="goto-next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+        <a href="javascript:" class="goto-last">
+          <span class="glyphicon glyphicon-step-forward"></span>
+        </a>
+        <a href="javascript:" class="fullscreen">
+          <span class="glyphicon glyphicon-fullscreen"></span>
+        </a>
+        <div class="goto-index-input">
+          <input type="text" class="goto-index form-control input-sm" value="1">&nbsp;/&nbsp;
+          <span class="total"></span>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 {% endblock %}
 
