重构目录结构

--- a/src/WebBundle/Resources/views/VideoActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'WebBundle:Activity:content-layout.html.twig' %}
 
-{% do script(['web/task/video-show.js']) %}
+{% do script(['web/task/video/index.js']) %}
 
 
 {% block content %}
