--- a/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
@@ -1,6 +1,6 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 
-{% do script(['http://localhost:12345/sdk.js','web/activity-manage/video-activity-fields.js']) %}
+{% do script(['http://localhost:12345/sdk.js','web/activity-manage/video/index.js']) %}
 {% block activity_content %}
   {% set mediaType = activity.mediaType|default('video') %}
   <div class="form-group">
@@ -28,13 +28,14 @@
     </div>
     <div class="col-xs-9">
       <input id="mediaId" class="form-control" type="hidden" name="mediaId" value={{ activity.mediaId|default(null) }}>
-      <input class="form-control width-input width-input-small" id="minute" type="text" name="minute"
+      <input class="form-control width-input width-input-small js-length" id="minute" type="text" name="minute"
              value="{{ activity.minute|default(null) }}">{{ '分'|trans }}
-      <input class="form-control width-input width-input-small" id="second" type="text" name="second"
+      <input class="form-control width-input width-input-small js-length" id="second" type="text" name="second"
              value="{{ activity.second|default(null) }}">{{ '秒'|trans }}
       <input type="hidden" id="ext_mediaId" name="ext[mediaId]" value="{{ activity.ext.mediaId|default(null) }}">
       <input type="hidden" id="ext_mediaSource" name="ext[mediaSource]" value="{{ activity.ext.mediaSource|default(null) }}">
       <input type="hidden" id="ext_mediaUri" name="ext[mediaUri]" value="{{ activity.ext.mediaUri|default(null) }}">
+      <input type="text" id="length" name="length" value="{{ activity.length|default(null) }}">
     </div>
   </div>
 {% endblock %}
