--- a/web/assets/v2/css/main-purple-light.css
+++ b/web/assets/v2/css/main-purple-light.css
@@ -13440,6 +13440,27 @@ textarea {
   text-overflow: ellipsis;
   padding-right: 20px;
 }
+.track-select-parent .track-selcet-list li .convertStatus {
+  position: absolute;
+  line-height: 1.2;
+  padding: 2px 10px;
+  border-radius: 5px;
+  right: 40px;
+  top: 8px;
+  color: white;
+}
+.track-select-parent .track-selcet-list li .convertStatus.convert-success {
+  background: #46c37b;
+}
+.track-select-parent .track-selcet-list li .convertStatus.convert-error {
+  background: red;
+}
+.track-select-parent .track-selcet-list li .convertStatus.convert-doing {
+  background: blue;
+}
+.track-select-parent .track-selcet-list li .convertStatus.convert-waiting {
+  background: #AAA;
+}
 .track-select-parent .track-selcet-list li:hover {
   background: #f5f5f5;
 }
