修复CI报错，隐藏课程概览历史数据会波动的问题

--- a/src/Topxia/WebBundle/Resources/views/CourseManage/Dashboard/course.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/Dashboard/course.html.twig
@@ -42,6 +42,13 @@
     </li>
   </ul>
 
-  <div id="course-dashboard-container" style="height:400px;" data-days="{{ days|json_encode }}" data-student-num="{{ studentNum|json_encode }}" data-finished-num="{{ finishedNum|json_encode }}" data-finished-rate="{{ finishedRate|json_encode }}" data-note-num="{{ noteNum|json_encode }}" data-ask-num="{{ askNum|json_encode }}" data-discussion-num="{{ discussionNum|json_encode }}">
+  <div id="course-dashboard-container" style="height:400px;" 
+    data-days="{{ days|json_encode }}" 
+    data-student-num="{{ studentNum|json_encode }}" 
+    data-finished-num="{{ finishedNum|json_encode }}" 
+    data-finished-rate="{{ finishedRate|json_encode }}" 
+    data-note-num="{{ noteNum|json_encode }}" 
+    data-ask-num="{{ askNum|json_encode }}" 
+    data-discussion-num="{{ discussionNum|json_encode }}">
   </div>
 {% endblock %}
