--- a/web/assets/v2/less/page/text-track.less
+++ b/web/assets/v2/less/page/text-track.less
@@ -93,6 +93,9 @@
         &.convert-waiting{
           background: #AAA;
         }
+        &.convert-none{
+          background: #AAA;
+        }
       }
       &:hover{
         background: #f5f5f5;
