--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -1,7 +1,7 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout-webpack.html.twig' %}
-{% set modal_class= "modal-md" %}
+{% set modal_class= "modal-lg" %}
 
-{% do script(['libs/jquery-validation.js','web/task-manage/create/index.js']) %}
+{% do script(['libs/jquery-validation.js','libs/iframe-resizer.js','web/task-manage/create/index.js']) %}
 
 {% block title %}
   {% if task|default(false) %}
@@ -113,6 +113,10 @@
   </div>
 {% endblock %}
 {% block footer %}
+  {% if task|default(false) %}
+  <button id="course-tasks-delete" type="submit" class="btn btn-danger pull-left delete-task"  data-url="{{path('course_manage_task_delete', {id:task.id,courseId:task.courseId})}}" >
+  <i class="es-icon es-icon-delete"></i>{{ '删除'|trans }}</button>
+  {% endif %}
   <button id="course-tasks-prev" type="submit" class="btn btn-default hidden " >{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
   <button id="course-tasks-submit" type="submit" class="btn btn-info hidden"  data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
